--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,12 +1,18 @@
-$font-size: 14px;
-$main-font: 'Roboto', sans-serif;
-$font-color: #000;
+$font-size: 16px;
+$main-font: 'eManrope', sans-serif;
+$font-color: #333333;;
 $font-second-color: #767676;
 $gray-font: #737373;
 
+$bg: #F7F6FF;
 
 $light: 300;
 $regular: 400;
 $medium: 500;
+$semibold: 600;
 $bold: 700;
+$extra-bold: 800;
 $black: 900;
+
+
+$pink-gradient: linear-gradient(115.11deg, #F32C6D 10.12%, #CB1D95 100.01%);
