--- a/src/html/achieves/achieves.scss
+++ b/src/html/achieves/achieves.scss
@@ -64,7 +64,7 @@
             align-items: center;
         }
     }
-    @media(max-height: 900px) {
+    @media(max-width: 900px) {
         display: none;
     }
 }
